# wazuh-http-request

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  README.md  doxygen.cfg  rtr  rtr.py  rtr_input.json  vcpkg.json
.github/workflows/: cmake-debug.yml  cppcheck.yml  http-request-ci.yml  rtr.yml
include/: HTTPRequest.hpp  ICURLHandler.hpp  IURLRequest.hpp  UNIXSocketRequest.hpp  curlHandlerCache.hpp  curlHandlerType.hpp  curlMultiHandler.hpp  curlSingleHandler.hpp  secureCommunication.hpp
shared/: builder.hpp  curlException.hpp  customDeleter.hpp  singleton.hpp
src/: HTTPRequest.cpp  ICURLHandler.hpp  IRequestImplementator.hpp  UNIXSocketRequest.cpp  curlMultiHandler.hpp  curlSingleHandler.hpp  curlWrapper.hpp  factoryRequestImplemetator.hpp  urlRequest.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  main.cpp
test/component/: CMakeLists.txt  component_test.cpp  component_test.hpp
test/unit/: CMakeLists.txt  curlHandlerCache_test.cpp  curlHandlerCache_test.hpp  secureCommunication_test.cpp  secureCommunication_test.hpp  unit_test.cpp  unit_test.hpp
test_tool/: CMakeLists.txt  actions.hpp  cmdArgsParser.hpp  factoryAction.hpp
